# hydentity

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vercel.json
apps/hydentity-app/: .gitignore  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/hydentity-app/scripts/: copy-circuit-files.js
apps/hydentity-app/src/: instrumentation.ts
apps/hydentity-app/src/adapters/: sns-adapter.ts
apps/hydentity-app/src/app/: globals.css  layout.tsx  page.tsx
apps/hydentity-app/src/app/claim/: page.tsx
apps/hydentity-app/src/app/settings/: page.tsx
apps/hydentity-app/src/app/setup/: page.tsx
apps/hydentity-app/src/components/: ClientOnly.tsx  DevnetDomainRegistration.tsx  Header.tsx  NetworkSwitcher.tsx  PrivateConfigSetup.tsx  Providers.tsx  VaultCard.tsx  WithdrawalStatus.tsx
apps/hydentity-app/src/config/: networks.ts  server-rpc.ts
apps/hydentity-app/src/contexts/: NetworkContext.tsx  TestModeContext.tsx
apps/hydentity-app/src/hooks/: useDevnetDomainRegistration.ts  useHydentity.ts  usePrivacyCash.ts  usePrivateConfig.ts  useSnsDomains.ts  useWithdrawals.ts
apps/hydentity-app/src/lib/: localstorage-shim.js  memory-localstorage.js  pollForConfirmation.ts
apps/hydentity-app/src/services/: privacy-cash.ts
apps/hydentity-app/src/types/: privacycash.d.ts
artifacts/: circuits_hash.txt
docs/: arcium-integration-spec.md  hydentity_sns_privacy_wrapper_spec.md
docs/gitbook/: README.md  SETUP.md  SUMMARY.md  roadmap.md  security.md
docs/gitbook/getting-started/: creating-a-vault.md  privacy-settings.md  receiving-funds.md  withdrawing-funds.md
docs/gitbook/how-it-works/: architecture.md  arcium-mpc.md  privacy-cash.md  privacy-flow.md
docs/gitbook/overview/: key-features.md  what-is-hydentity.md  why-privacy-matters.md
docs/gitbook/technical/: account-structure.md  on-chain-program.md  sdk.md
encrypted-ixs/src/: lib.rs
programs/hydentity/: Cargo.toml
programs/hydentity/encrypted-ixs/: execute_split.rs  generate_plan.rs  mod.rs  query_balance.rs  store_config.rs  types.rs  update_config.rs
programs/hydentity/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/hydentity/src/instructions/: add_delegate.rs  claim_vault.rs  close_vault.rs  deposit_to_umbra.rs  initialize_vault.rs  mark_domain_transferred.rs  mod.rs  reclaim_domain.rs  request_withdrawal.rs  revoke_delegate.rs  store_private_config.rs  update_policy.rs  withdraw_direct.rs
programs/hydentity/src/state/: delegate_session.rs  encrypted_config.rs  mod.rs  name_vault.rs  pending_withdrawal.rs  privacy_policy.rs  vault_authority.rs
scripts/: init-arcium-devnet.ts
tests/: arcium-devnet.ts  hydentity.ts
(+11 files in other folders)
