[package]
name = "hydentity"
version = "0.1.0"
description = "Solana SNS Privacy Wrapper - Private receiving via Umbra Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydentity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
arcium-anchor = "0.5.4"
arcium-macros = "0.5.4"
arcium-client = { default-features = false, version = "0.5.4" }

