[package]
name = "hydentity"
version = "0.1.0"
description = "Solana SNS Privacy Wrapper - Private receiving via Umbra Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydentity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
arcium = ["arcium-anchor", "arcium-macros", "arcium-client"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
arcium-anchor = { version = "0.5.4", optional = true }
arcium-macros = { version = "0.5.4", optional = true }
arcium-client = { version = "0.5.4", default-features = false, optional = true }
blake3 = "=1.5.5"
base64ct = "=1.6.0"
const-oid = "=0.9.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

